src/objects/User.object
<CustomObject>
    <fields>
        <fullName>PartnerUrl__c</fullName>
        <formula>$Api.Partner_Server_URL_310</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PartnerUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <formula>$Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SessionId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__padToken__c</fullName>
        <description>tablet token</description>
        <label>padToken</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__phoneToken__c</fullName>
        <description>zPaper:Mobile notification token</description>
        <inlineHelpText>From iPhone or iPad goto http://localhost:8080/getDeviceData</inlineHelpText>
        <label>phoneToken</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>